--- a/Atividade_3_IA.ipynb
+++ b/Atividade_3_IA.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnDbedh5TlfPVSQsdiXAm9"
+      "authorship_tag": "ABX9TyNk3eBD88TFjhFfQlKbhDae",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Kaiky-Student/Atividade-3---IA/blob/main/Atividade_3_IA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1101,13 +1112,13 @@
         "    'Random Forest': {'n_estimators': [50, 100, 200]},\n",
         "    'SVM': {'C': [0.1, 1, 10], 'gamma': [0.1, 0.01, 0.001]},\n",
         "    'Logistic Regression': {'C': [0.1, 1, 10]},\n",
-        "    'KNN': {'n_neighbors': [3, 5, 7]} #KNN\n",
+        "    'KNN': {'n_neighbors': [3, 5, 7, 13, 41]} #KNN\n",
         "}"
       ],
       "metadata": {
         "id": "E38veyRbyV67"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1135,23 +1146,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s9fwMmb3yX_V",
-        "outputId": "79bc10f8-1862-4ee4-cc6f-7d254481213e"
+        "outputId": "000bdbfb-ff1b-48f6-b73a-1bdf404a2f1c"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Decision Tree: 0.744047619047619\n",
-            "Random Forest: 0.8138605442176872\n",
+            "Decision Tree: 0.7519557823129251\n",
+            "Random Forest: 0.8222789115646257\n",
             "SVM: 0.8263605442176871\n",
             "Logistic Regression: 0.8346938775510203\n",
-            "KNN: 0.8016156462585033\n",
+            "KNN: 0.826530612244898\n",
             "Melhor modelo: LogisticRegression(C=10)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O KNN se destacou como o melhor modelo, porém apresentou um ótimo desempenho comparado ao restante dos modelos\n",
+        "\n",
+        "*   LogisticRegression: 0.8346938775510203 (melhor modelo)\n",
+        "*   KNN: 0.826530612244898\n"
+      ],
+      "metadata": {
+        "id": "1xomR-T72e6s"
+      }
     },
     {
       "cell_type": "markdown",
