--- a/Atividade_3_IA.ipynb
+++ b/Atividade_3_IA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNk3eBD88TFjhFfQlKbhDae",
+      "authorship_tag": "ABX9TyOcVQO9bvNzgYZBYuqK9ZT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1379,6 +1379,63 @@
           },
           "metadata": {},
           "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Busca de melhores hiperparâmetros para o KNN"
+      ],
+      "metadata": {
+        "id": "kGpAQN3f4zFB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Definir o modelo KNN\n",
+        "KNN = KNeighborsClassifier()\n",
+        "\n",
+        "# Definir o espaço de busca para os hiperparâmetros do KNN\n",
+        "param_grid = {\n",
+        "    'n_neighbors': [3, 5, 7, 9, 11, 13, 41],  # Número de vizinhos\n",
+        "    'weights': ['uniform', 'distance'],  # Tipo de ponderação\n",
+        "    'metric': ['euclidean', 'manhattan', 'minkowski']  # Métrica de distância\n",
+        "}\n",
+        "\n",
+        "# Usar o GridSearchCV para buscar a melhor combinação de hiperparâmetros\n",
+        "grid_search = GridSearchCV(KNN, param_grid, cv=5, scoring='accuracy')\n",
+        "\n",
+        "# Ajustar o GridSearchCV ao conjunto de dados de treinamento\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "# Obter o melhor modelo\n",
+        "best_knn = grid_search.best_estimator_\n",
+        "best_params = grid_search.best_params_\n",
+        "best_score = grid_search.best_score_\n",
+        "\n",
+        "print(\"Melhor modelo KNN:\", best_knn)\n",
+        "print(\"Melhores hiperparâmetros:\", best_params)\n",
+        "print(\"Melhor desempenho:\", best_score)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uz1DMF704ikC",
+        "outputId": "062dfb31-f303-4b45-c395-6c1ab51dcdc7"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Melhor modelo KNN: KNeighborsClassifier(metric='euclidean', n_neighbors=41)\n",
+            "Melhores hiperparâmetros: {'metric': 'euclidean', 'n_neighbors': 41, 'weights': 'uniform'}\n",
+            "Melhor desempenho: 0.826530612244898\n"
+          ]
         }
       ]
     }
