Criado através do Colab

--- a/Projeto_de_Aplicação_Câncer_de_Colo_do_Útero.ipynb
+++ b/Projeto_de_Aplicação_Câncer_de_Colo_do_Útero.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnfTh9hnZNTRfyQZ4c0cPW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +22,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Kaiky-Student/Atividade-3---IA/blob/main/Projeto_de_Aplica%C3%A7%C3%A3o_C%C3%A2ncer_de_Colo_do_%C3%9Atero.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/britoguilherme75/Atividade-3---IA/blob/main/Projeto_de_Aplica%C3%A7%C3%A3o_C%C3%A2ncer_de_Colo_do_%C3%9Atero.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Projeto de Aplicação - Modelo de Predição de Câncer de Colo do úutero\n",
+        "#Projeto de Aplicação - Modelo de Predição de Câncer de Colo do útero\n",
         "\n",
         "Este projeto é a conclusão da disciplina de Inteligência Artificial e Tecnologia, ministrada pelos professores Flávio Seixas, Érito Marques e Cláudio Tinoco.\n",
         "\n",
@@ -43,7 +42,7 @@
       "cell_type": "markdown",
       "source": [
         "#Motivação e Objetivo\n",
-        "O câncer de colo de útero é uma das neoplasias mais prevalentes entre as mulheres e apresnta uma alta taxa de mortalidade, especialmente em países de baixa e média renda. Estima-se que mais de 95% dos casos dessa doença estejam relacionados à infecção pelo Papilomavírus Humano (HPV), uma infecção viral que pode passar despercebida, já que a maioria das instâncias de câncer de colo do útero é assintomática em seus estágios iniciais. Esse cenário desafia os sistemas de saúde a aprimorar as estratégias de diagnóstico precoce e tratamento eficaz.\n",
+        "O câncer de colo de útero é uma das neoplasias mais prevalentes entre as mulheres e apresenta uma alta taxa de mortalidade, especialmente em países de baixa e média renda. Estima-se que mais de 95% dos casos dessa doença estejam relacionados à infecção pelo Papilomavírus Humano (HPV), uma infecção viral que pode passar despercebida, já que a maioria das instâncias de câncer de colo do útero é assintomática em seus estágios iniciais. Esse cenário desafia os sistemas de saúde a aprimorar as estratégias de diagnóstico precoce e tratamento eficaz.\n",
         "\n",
         "Nesse contexto, o presente trabalho propõe o desenvolvimento de um modelo de predição utilizando técnicas de aprendizado de máquina supervisionado para prever o resultado da biópsia cervical em relação à presença de câncer de colo do útero. O objetivo principal é estabelecer uma base sólida para um modelo de predição que possa ser testado e avaliado quanto à sua eficácia e precisão no diagnóstico dessa neoplasia, contribuindo assim para a melhoria dos processos de detecção e tratamento precoce."
       ],
@@ -56,11 +55,11 @@
       "source": [
         "#Descrição do dataset\n",
         "\n",
-        "O dataset escolhido foi recolhido no Hospital Universitario de Caracas, em Caracas, na Venezuela e compreende informações demográficas, hábitos e histórico médico de 858 pacientes. Em certos casos, os pacientes optaram por não responder as perguntas ou decidiram omitir dados por motivos de privacidade e, portanto, há dados faltantes.\n",
+        "O dataset escolhido foi recolhido no Hospital Universitario de Caracas, em Caracas, na Venezuela e compreende informações demográficas, hábitos de vida e histórico médico de 858 pacientes. Em certos casos, os pacientes optaram por não responder as perguntas ou decidiram omitir dados por motivos de privacidade e, portanto, há dados faltantes.\n",
         "\n",
         "Os dados foram tratados por intermédio do Transfering Learning (TL), ao promover o treinamento de classificação de uma base de dados (MRI) a partir do conhecimento padronizado de outra base de dados (exame citológico cervical).\n",
         "\n",
-        "O dataset foi desenvolvido, coletado e manipulado originalmente para a predição de indicadores/diagnóstico de câncer do colo do útero e apresenta 36 variáveis, dentre elas Idade, Presença ou não de ISTs, Resultados de Biópsia, Citologia, entre outros.\n",
+        "O dataset foi desenvolvido, coletado e manipulado originalmente para a predição de indicadores/diagnóstico de câncer do colo do útero e apresenta 36 variáveis, dentre elas Idade, presença ou não de ISTs, resultados de Biópsias, Citologia, colposcopia entre outros.\n",
         "\n",
         "https://archive.ics.uci.edu/dataset/383/cervical+cancer+risk+factors"
       ],
@@ -70,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "49n3T_GKubxp",
         "colab": {
@@ -128,7 +127,7 @@
       "metadata": {
         "id": "kQfT3ZZhvY_W"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +156,10 @@
         "\n",
         "# Verificando os primeiros valores de X e y\n",
         "print(X.head())\n",
-        "print(y.head())"
+        "print(y.head())\n",
+        "\n",
+        "Inicialmente, o resultado da biópsia do paciente era uma feature, ou seja, pertencia à classe X, neste código,\n",
+        "separamos ela em uma coluna isolada e atribuímos à variável y."
       ],
       "metadata": {
         "colab": {
@@ -166,7 +168,7 @@
         "id": "nOnRhKRolPqO",
         "outputId": "a05cd41f-f9fb-4040-bb58-8ac1a7de0a1f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +471,7 @@
         },
         "outputId": "7957ef0e-afcd-4b5f-92a9-e0e17e0ace14"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +556,7 @@
         "id": "Po53eglEv0kf",
         "outputId": "891a1ac5-d862-497f-fc29-de0d808b6f5d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1017,7 @@
         "id": "r7MCMY_VwpWl",
         "outputId": "800ea371-65f9-4b60-b563-8342d8022bc6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1473,7 @@
         },
         "outputId": "94882d20-9565-4434-d249-b42b7908a96d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1929,7 +1931,7 @@
         "id": "B_1lZmW2le05",
         "outputId": "a1bb5003-fc37-40db-dcab-26f2e2bbb0da"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2012,7 +2014,7 @@
         },
         "outputId": "7b7d6b90-a411-4e8d-fdaf-6ce8a61b5b37"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2046,7 +2048,7 @@
       "metadata": {
         "id": "Tqhz4OFAOv_C"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2069,7 +2071,7 @@
         "id": "F_YjXcz7IRVe",
         "outputId": "4f988cb6-404d-498c-aaf5-5451a7aa78d8"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2110,7 +2112,7 @@
         "id": "6P2XFYhnpi8M",
         "outputId": "9ef280db-878c-4496-96e9-510d0e4243da"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2174,7 +2176,7 @@
       "metadata": {
         "id": "EMXvl_P8PGJ7"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2206,7 +2208,7 @@
         "id": "ju8WxK7VPJEb",
         "outputId": "8d51cd37-15b1-4fac-fe32-6925a279b652"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,7 +2248,7 @@
         "id": "UGm6JtfyQZOM",
         "outputId": "f9e6bb5b-a0db-4c99-f955-87f7a3a3799f"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2289,7 +2291,7 @@
         "id": "AeoX4uCTQhP8",
         "outputId": "e20048c5-102e-4dfe-d357-8cb01941ecbb"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2336,7 +2338,7 @@
         "id": "1Lr1Bx2bRZhR",
         "outputId": "2ab19af5-a0f6-43c0-ff1f-6833c4670376"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
